--- a/templates/profile/incomingTransfers.html.twig
+++ b/templates/profile/incomingTransfers.html.twig
@@ -8,14 +8,11 @@
 	<div class="container-fluid card">
 		<div class="row">
 			<div class="col-sm-12">
-                <table class="table table-stripped table-bordered" style="width:100%" id="item_table">
+                <table class="table table-stripped" style="width:100%" id="item_table">
                     <thead>
-                        <th>Transfered To</th>
+                        <th>Transfered From</th>
                         <th>Requested Date</th>
-                        <th>Total Item</th>
-                        <th>Approver 1</th>
-                        <th>Approver 2</th>
-                        <th>Approver 3</th>
+                        <th>Total Items</th>
                         <th>status</th>
                         <th>actions</th>
                     </thead>
@@ -26,29 +23,17 @@
                                 <td>{{item.date|date("Y-m-d")}}</td>
                                 <td>{{item.total}}
                                 <td>
-                                    {% if (item.status > 1) and (item.status != 7) %}
-                                        <span><i class="fa fa-check"></i> </span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if (item.status > 2) and (item.status != 7) %}
-                                        <span><i class="fa fa-check"></i></span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if (item.status > 3) and (item.status != 7) %}
-                                        <span><i class="fa fa-check"></i> </span>
-                                    {% endif %}
-                                </td>
-                                <td>
                                     {% if item.status == 0 %}
                                         <span class="badge badge-primary">Not approved</span>
                                     {% elseif item.status == 1 %}
                                         <span class="badge badge-success">Accepted</span>
-                                    {% elseif item.status == 7 %}
-                                        <span class="badge badge-danger">Declined</span>
+                                    {% elseif (item.status == 2) or (item.status == 3) %}
+                                        <span class="badge badge-defalut">in progress</span>
+                                    {% elseif item.status == 4 %}
+                                        <span class="badge badge-success">Approved</span>
                                     {% else %}
-                                        <span class="badge badge-success">Approved</span>                                        
+
+                                        <span class="badge badge-danger">Declined</span>
                                     {% endif %}
                                 </td>
                                 <td><a href="transfer/{{ item.id }}" >show </a></td>
