--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -196,6 +196,12 @@
 											<p>Product Type</p>
 										</a>
 									</li>
+									<li class="nav-item">
+										<a href="{{ path('unit_of_measure_index') }}" class="nav-link">
+											<i class="far fa-circle nav-icon"></i>
+											<p>Unit Of Measure</p>
+										</a>
+									</li>
 									{# <li class="nav-item">
 									                <a href="{{ path('product_index2') }}" class="nav-link">
 									                  <i class="far fa-circle nav-icon"></i>
