--- a/templates/transfer/show.html.twig
+++ b/templates/transfer/show.html.twig
@@ -13,6 +13,10 @@
                         <td>{{group.firstName}} {{group.middleName}} {{group.lastName}}</td>
                     </tr>
                     <tr>
+                        <td width="200px">Transfered To</td>
+                        <td>{{group.tfname}} {{group.tmname}} {{group.tlname}}</td>
+                    </tr>
+                    <tr>
                         <td>Transfer Date</td>
                         <td>{{group.date| date("Y-m-d")}}</td>
                     </tr>
@@ -39,18 +43,18 @@
                 </table>
                 {% if app.user.id != group.sender_id %}
                 <form action="accept" method="post" style="padding:25px;">
-                    <input type="hidden" value="{{group.id}}" name="test">
+                    <input type="hidden" value="{{ group.id }}" name="test">
                     {% if group.status == 0 %}
                     <input type="submit" class="btn btn-primary" value="Accept Request" style="margin-bottom: 3px;">
                     {# {% elseif group.status == 5 %} #}
                     <a href="reject/{{group.id}}" class="btn btn-danger"/>Reject Request</a>
-                    {% elseif group.status == 1 %}
+                    {% elseif (group.to_id == app.user.id) and (group.status !=4) %}
                         <p><i class="fa fa-check"></i> You Accepted this request</p>
                     {% elseif (group.status == 2) or (group.status == 3) %}
                         <p><i class="fa fa-spinner"></i> Approving in Progress</p>
                     {% elseif group.status == 4%}
                         <p><i class="fa fa-check"></i> Approved</p>
-                    {% else %}
+                    {% elseif group.status == 7 %}
                         <p><i class="fa fa-times"> Not Accepted/Approved</i></a>
                     {% endif %}
                  </form>
