--- a/templates/requests/index.html.twig
+++ b/templates/requests/index.html.twig
@@ -62,9 +62,9 @@
 											<th>No.</th>
 											<th>Requester</th>
 											<th>Req.Date</th>
-											<th>Approver 1</th>
-											<th>Approver 2</th>
-											<th>Approver 3</th>
+											<th>Department Head</th>
+											<th>Property & Gen.service Head</th>
+											<th>Store Keeper</th>
 											<th>Details</th>
 										</tr>
 
