--- a/templates/user_type/index.html.twig
+++ b/templates/user_type/index.html.twig
@@ -3,9 +3,16 @@
 {% block title %}UserType index{% endblock %}
 
 {% block body %}
-    <h1>UserType index</h1>
 
-    <table class="table">
+
+    <a href="{{ path('user_type_new') }}" class="btn btn-success">Create new</a>
+
+<div class="card card-info mt-3">
+<div class="card card-header">
+    <h3>User Type list</h3>
+</div>
+<div class="card card-body">
+ <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -21,8 +28,8 @@
                 <td>{{ user_type.name }}</td>
                 <td>{{ user_type.description }}</td>
                 <td>
-                    <a href="{{ path('user_type_show', {'id': user_type.id}) }}">show</a>
-                    <a href="{{ path('user_type_edit', {'id': user_type.id}) }}">edit</a>
+                    <a href="{{ path('user_type_show', {'id': user_type.id}) }}" class="btn btn-info">show</a>
+                    <a href="{{ path('user_type_edit', {'id': user_type.id}) }}" class="btn btn-warning" >edit</a>
                 </td>
             </tr>
         {% else %}
@@ -32,6 +39,8 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
+</div>
+   
 
-    <a href="{{ path('user_type_new') }}">Create new</a>
 {% endblock %}
