--- a/templates/stock/index.html.twig
+++ b/templates/stock/index.html.twig
@@ -144,10 +144,10 @@
 										{{ form_end(form) }}
 									</div>
 
-									<table class="table table-hover table-responsive">
-										<thead class="thead-light">
+									<table class="table table-hover table-responsive" >
+										<thead   >
 											<tr>
-												<th>#</th>
+												<th></th>
 												<th>#</th>
 												<th>Product</th>
 												<th>price per unit</th>
